# mcp_snowflake_agent

./: .env.example  .env.template  .gitignore  Containerfile  README.md  pyproject.toml
agentengine/: .env.template  README.md  check_status.py  deploy.py  pyproject.toml  test_agent.py
agentengine/src/: root_agent.py
agentspace/: .env.template  README.md  agent_manager.sh  jira_agent.json
snowflake_adk_agent/: .gitignore  agent.py
